@@ -12,6 +12,7 @@
 - New methods in NXSL classes Node, Interface, and NetObj: setStatusCalculation and setStatusPropagation
 - New attributes "slot" and "port" in NXSL class Interface
 - Can execute arbitrary NXSL script in context of node, cluster, subnet, or container object from management console
+- Improved network topology changes detection
 - Management console:
     - Can show alarms for multiple selected objects
     - Fixed non-working ordering in event list in alarm details view
